[gd_scene load_steps=4 format=3 uid="uid://db8ijx8h43mi0"]

[ext_resource type="Script" path="res://scripts/powerup.gd" id="1_2kghi"]
[ext_resource type="Texture2D" uid="uid://buab4wqkyy5bh" path="res://assets/kenney_space-shooter-redux/PNG/Power-ups/powerupBlue.png" id="2_we2x8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_incyy"]
radius = 21.0

[node name="PowerUp" type="Area2D"]
scale = Vector2(1.3, 1.3)
collision_layer = 8
script = ExtResource("1_2kghi")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_we2x8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_incyy")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, -34)
scale = Vector2(0.6, 0.5)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
